--- a/css/styles.css
+++ b/css/styles.css
@@ -38,10 +38,18 @@ header h2 {
 }
 
 /* Carousel Transparent BG */
+
 .carousel-caption {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
 .carousel {
     border: solid #5637DD;
+}
+
+#carouselButton {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
 }
