--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,9 +1,10 @@
-$color-primary: orange;
+$color-primary: #0275d8;
 $color-secondary: #5637dd;
 $color-pale: #CEC8FF;
 $color-mid: #901CAD;
 $color-dark: #60106b;
 $color-black-transparent: rgba(0, 0, 0, 0.5);
+$color-teal: #17A2B8;
 
 $body-font: "Open Sans", sans-serif;
 $header-font: "Lobster", cursive;
@@ -64,4 +65,18 @@ header {
     right: 0;
     bottom: 0;
     z-index: 100;
+}
+
+#reserveModal {
+    .modal-header {
+        color: white;
+        background-color: $color-teal;
+    }
+}
+
+#loginModal {
+    .modal-header {
+        color:white;
+        background-color: $color-mid;
+    }
 }
